Revamp color scheme

--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -6,7 +6,7 @@
       name="description"
       content="A scorekeeping and stat-tracking app for recreational softball."
     />
-    <meta name="theme-color" content="#1c5253" />
+    <meta name="theme-color" content="#293241" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
